<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout tools:context=".IntroActivity" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content">

        <TextView
            android:id="@+id/textView9"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/please_enter_your_income_and_click_the_button"
            android:textColor="#080809"
            android:textSize="20dp" />

</LinearLayout>


    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F9F9F9"
            android:padding="10dp"
            android:text="@string/income"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="20dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:text="@string/calculate" />

</LinearLayout>


    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:padding="10dp"
            android:text="@string/my_12"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20dp" />

</LinearLayout>


    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="25dp"
        android:text="Click on an egg that interests you:"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/percents"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stockEgg"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0 %"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/etfEgg"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0 %"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/mfEgg"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0 %"
                android:textColor="@android:color/black"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/eggs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/egg1"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:src="@drawable/bshell" />

            <ImageView
                android:id="@+id/egg2"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:src="@drawable/bshell" />

            <ImageView
                android:id="@+id/egg3"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:src="@drawable/bshell" />

        </LinearLayout>




    </RelativeLayout>


    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Stocks"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/etfs"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Mutual Funds"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20dp" />

</LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/growth"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:background="#00F7F3F3"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/twelveClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:text="What's my 12% ?"
        android:textColor="#080809"
        android:textSize="20dp"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="12sp" android:textColor="#080809" android:padding="10dp" android:id="@+id/twelveInfo" android:clickable="true"/>
</LinearLayout>